tests/ui/nll/loan_ends_mid_block_pair.stderr
error[E0506]: cannot assign to `data.0` because it is borrowed
  --> $DIR/loan_ends_mid_block_pair.rs:12:5
   |
LL |     let c = &mut data.0;
   |             ----------- `data.0` is borrowed here
LL |     capitalize(c);
LL |     data.0 = 'e';
   |     ^^^^^^^^^^^^ `data.0` is assigned to here but it was already borrowed
...
LL |     capitalize(c);
   |                - borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
